Closed Bug 1431825 Opened 8 years ago Closed 8 years ago

Sandbox MinGW Compilation errors: _Copy_s not defined

Categories

(Core :: Security: Process Sandboxing, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

Details

(Whiteboard: [tor][mingw-upstream-pending])

Attachments

(1 file)

0:02.86 /home/tom/Documents/moz/mingw-work/sandbox/security/sandbox/chromium/sandbox/win/src/handle_closer.cc:150:14: error: ‘const class std::__cxx11::basic_string<wchar_t>’ has no member named ‘_Copy_s’ 0:02.87 i->first._Copy_s(output, i->first.size(), i->first.size()); 0:02.87 ^~~~~~~
Comment on attachment 8944061 [details] Bug 1431825 Map _Copy_s to copy for basic_string compatibility on MinGW https://reviewboard.mozilla.org/r/214386/#review220104
Attachment #8944061 - Flags: review?(bobowencode) → review+
I realised after that we could do this (and maybe some of the others) by having another force included file like sdkdecls.h [1] However, given that we are going to try and upstream these it's probably best to keep them in the files, so it's easy to spot if we get them through updates. If some of these get refused upstream then we could revisit that. [1] https://searchfox.org/mozilla-central/source/mozilla-config.h.in#59
Depends on: 1431807
Patch land order: 1431621, 1431801, 1431807, 1431825 (this bug)
Keywords: checkin-needed
Blocks: 1432239
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/db488f44ba6b Map _Copy_s to copy for basic_string compatibility on MinGW r=bobowen
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: