Bug 1431825 Map _Copy_s to copy for basic_string compatibility on MinGW r=bobowen

MozReview-Commit-ID: 48P2G9nBfGf

--HG--
extra : rebase_source : ffeb7ce3c41964e245097c2dc7665e2e99ae7a43